[package]
name = "cursed-roon-rewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["server", "client", "http1", "http2", "runtime", "tcp"] }
tokio = { version = "1.32.0", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"] }
